<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/verde_aqua"
    android:layout_height="match_parent"
    android:id="@+id/p2"
    >

    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aoboshi_one"
        android:text="@string/titulo"
        android:textSize="30dp"
        android:textColor="@color/verde_opaco"
        android:textAlignment="center"
        android:paddingTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introP2"
        android:fontFamily="@font/aoboshi_one"
        android:textColor="@color/verde_opaco"
        android:textAlignment="center"
        android:layout_margin="20dp"
        />

    <ImageView
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="298dp"
        android:padding="40dp"
        android:src="@drawable/n2_rem" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:layout_margin="10dp"
        android:background="@drawable/fondocuadradoverde"
        android:stretchColumns="*">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="17dp">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:contentDescription="Flor decorativa"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/vflor" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/aoboshi_one"
                android:padding="8dp"
                android:text="@string/t1"
                android:textColor="@color/verde_aqua"
                android:textSize="12dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:contentDescription="Flor decorativa"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/vflor" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="66dp"
                android:fontFamily="@font/aoboshi_one"
                android:padding="8dp"
                android:text="@string/t2"
                android:textColor="@color/verde_aqua"
                android:textSize="12dp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:contentDescription="Flor decorativa"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/vflor" />

            <TextView
                android:layout_width="300dp"
                android:fontFamily="@font/aoboshi_one"
                android:padding="8dp"
                android:text="@string/t3"
                android:textColor="@color/verde_aqua"
                android:textSize="12dp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnComenzar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde_aqua_opaco"
        android:text="@string/comezar"
        android:textStyle="bold"
        android:fontFamily="@font/aoboshi_one"
        android:textSize="25dp"
        android:padding="5dp"
        android:layout_margin="10dp"/>






</LinearLayout>