<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/agregarCartas"
    android:background="@color/azulMuyClaro"
    >

    <TextView
        android:textColor="@color/azulFuerte"
        android:fontFamily="@font/aoboshi_one"
        android:textSize="30dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nv"
        android:textAlignment="center"
        />


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:background="@drawable/n6"
        android:layout_gravity="center"
        android:padding="8dp"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="70dp"
        android:background="@drawable/n7" />


    <Button
        android:id="@+id/btnJugarFC"
        android:fontFamily="@font/aoboshi_one"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:backgroundTint="@color/azulMuyClaro"
        android:textColor="@color/azul"
        android:textAlignment="textStart"
        android:text="#.Tema" />
</LinearLayout>

    <TextView
        android:fontFamily="@font/aoboshi_one"
        android:textColor="@color/azulFuerte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addCarta"
        android:textAlignment="center"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:fontFamily="@font/aoboshi_one"
        android:layout_margin="10dp"/>


    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/cant"
        android:layout_margin="10dp"
        android:fontFamily="@font/aoboshi_one"
        android:textSize="20dp"
        android:textColor="@color/azulFuerte"/>

    <LinearLayout
        android:background="@drawable/cuadroblancoconcontornoazul"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="195dp"
            android:padding="10dp"
            android:layout_height="match_parent"
            android:text="@string/cant2"
            android:textColor="@color/azulFuerte"
            android:fontFamily="@font/aoboshi_one"
            android:textSize="20dp"
            android:backgroundTint="@color/azulFuerte"/>

        <EditText
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/aoboshi_one"
            android:textAlignment="center"
            android:textSize="15dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="195dp"
            android:padding="5dp"
            android:id="@+id/btnAddNuevas"
            android:layout_height="wrap_content"
            android:text="@string/addT"
            android:fontFamily="@font/aoboshi_one"
            android:textSize="15dp"
            android:backgroundTint="@color/azulFuerte"/>

        <Button
            android:id="@+id/btnadd"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:text="@string/quitarT"
            android:fontFamily="@font/aoboshi_one"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/naranja"/>

    </LinearLayout>




</LinearLayout>